# TwoBandEq

./: CMakeLists.txt  README.md  misc.xml  modules.xml  workspace.xml
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResponseCurveComponent.cpp  ResponseCurveComponent.h
